# Projet7

./: .gitattributes  .gitignore  .~lock.resultats_ragas.csv#  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  resultats_ragas.csv
.github/workflows/: deploy-hf.yml
tests/: test_api.py
utils/: api.py  app.py  auth.py  chatbot.py  data_loader.py  embedder.py  evaluate.py  evaluate_old.py  indexer.py
utils/faiss_index/: index.pkl
