[project]
name = "livrables"
version = "0.1.0"
dependencies = [
    "active>=0.0.5a0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.5",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.10.0",
    "mistralai>=2.5.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.0.0",
    "spacy>=3.8.0",
    "streamlit>=1.41.0",
    "streamlit-feedback>=0.1.4",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "umap-learn>=0.5.7",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
fr-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
override-dependencies = [
    "numba>=0.58.0",
    "llvmlite>=0.41.0"
]
